Adding AMP tests to examples program

--- a/examples/src/main/java/examples/html/SimpleEmail.html
+++ b/examples/src/main/java/examples/html/SimpleEmail.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <title>Lorem Ipsum</title>
 </head>
-<body>
+<body style="background-color: powderblue">
     <div>
-        <h1>Lorem Ipsum</h1>
+        <h1 style ="color: white">Lorem Ipsum</h1>
         <h2>The standard Lorem Ipsum passage, used since the 1500s</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
